# hexmux

./: .gitignore  DESIGN.md  README.md  pyproject.toml
native/: CMakeLists.txt
native/include/hexmux/: activation.hpp
native/launchd/: io.hexmux.supervisor.plist.in
native/src/: activation_launchd.cpp  activation_systemd.cpp  main.cpp  process_posix.cpp
native/systemd/: hexmux.service.in  hexmux.socket
plugin/: hexmux_plugin.py
scripts/: fetch_idapython_reference.py  install-linux.sh  install-macos.sh  install_activation.py  install_runtime.py
skills/drive-ida-with-hexmux/: SKILL.md
skills/drive-ida-with-hexmux/agents/: openai.yaml
skills/drive-ida-with-hexmux/references/: idapython.md
src/hexmux/: __init__.py  cli.py  mcp.py  paths.py  supervisor.py  tools.py  wire.py
tests/: test_activated_supervisor.py  test_fetch_idapython_reference.py  test_mcp.py  test_paths.py  test_plugin_bootstrap.py  test_supervisor.py
